Fix incorrect link in Voici example

--- a/voici/simple_example.ipynb
+++ b/voici/simple_example.ipynb
@@ -7,7 +7,7 @@
     "# Calculate the central magnification of an eye - camera system\n",
     "\n",
     "This integration demonstrates how PAROS can be used to calculate the central magnification of a fundus image.  \n",
-    "More information can be found at [our GitHub repository](https://MREYE-LUMC/PAROS)."
+    "More information can be found at [our GitHub repository](https://github.com/MREYE-LUMC/PAROS)."
    ]
   },
   {
