Add warning about medical use to Voici demo

--- a/voici/simple_example.ipynb
+++ b/voici/simple_example.ipynb
@@ -7,7 +7,9 @@
     "# Calculate the central magnification of an eye - camera system\n",
     "\n",
     "This integration demonstrates how PAROS can be used to calculate the central magnification of a fundus image.  \n",
-    "More information can be found at [our GitHub repository](https://github.com/MREYE-LUMC/PAROS)."
+    "More information can be found at [our GitHub repository](https://github.com/MREYE-LUMC/PAROS).\n",
+    "\n",
+    "> ⚠ THIS EXAMPLE IS NOT INTENDED FOR MEDICAL USE AND DOES NOT ALLOW TO CHANGE CAMERA-RELATED PARAMETERS."
    ]
   },
   {
@@ -632,8 +634,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_5999cfdd1ae64cafb163d5eb75174c81",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_d6ca46ab18564aa88b05480d193e1512",
        "tabbable": null,
@@ -823,8 +825,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_84473ca04c0949b0bb406bc6d653c0c7",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.05,
        "style": "IPY_MODEL_5b2e8a6dd7db4bab93b72fef247110d2",
        "tabbable": null,
@@ -854,7 +856,7 @@
        "style": "IPY_MODEL_e7642de31d034639a9d41d4ef067f8a8",
        "tabbable": null,
        "tooltip": null,
-       "value": 0.0
+       "value": 0
       }
      },
      "183c9fa3176b46838ac77018b54c4e24": {
@@ -875,8 +877,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_2cb0e2b0ac314a91b438aa29de5e1336",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.5,
        "style": "IPY_MODEL_787fbfc34f734f0893db15dbda76d7ca",
        "tabbable": null,
@@ -902,8 +904,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_fbd1a56225db42fca27b0a9e8284c1e4",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_e879b42b9435490095d9a3514fccf178",
        "tabbable": null,
@@ -929,8 +931,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_5e5402744ca64794a4213b476aef1362",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_2f12e6a61c6d4e8b9764581a9ba5077b",
        "tabbable": null,
@@ -956,13 +958,13 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_71cbb231d3334c2fa218b5b12d21943c",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_825bf780eaf64490a87a8a5506a8b36d",
        "tabbable": null,
        "tooltip": null,
-       "value": 6.0
+       "value": 6
       }
      },
      "2298187047724d6cab450f753c3e5b07": {
@@ -1232,13 +1234,13 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_4bc9f6a1a6c449eaa6b637344cab059a",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_65089f5b380b4378977a42e3df3ecdfb",
        "tabbable": null,
        "tooltip": null,
-       "value": 4.0
+       "value": 4
       }
      },
      "2f12e6a61c6d4e8b9764581a9ba5077b": {
@@ -1274,8 +1276,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_b9b595b8c6cf4bda99580a7339c2709c",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_88727c2cdde44fa2957c5054faec99ca",
        "tabbable": null,
@@ -1301,13 +1303,13 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_90922db214ef4006af8c4482ad643c20",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.5,
        "style": "IPY_MODEL_29cc3cd7df0e471cb040a385ee51f5cc",
        "tabbable": null,
        "tooltip": null,
-       "value": 0.0
+       "value": 0
       }
      },
      "350f5e888f8a4f0b9bd16c02856617f0": {
@@ -1411,8 +1413,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_f24a451ed780490d83788014dfb791b0",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.5,
        "style": "IPY_MODEL_bcbbc1a7a6af4b8aa369f3771e2733ec",
        "tabbable": null,
@@ -1491,8 +1493,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_ee91ae64c4014d2988c153db36f684ec",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.05,
        "style": "IPY_MODEL_418c2396044e43c2af16db5ec6a2c384",
        "tabbable": null,
@@ -1544,13 +1546,13 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_bfb8324e21594fb79b3511225d7b074c",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_9ab6c0551d8c4263a37b3431d847de12",
        "tabbable": null,
        "tooltip": null,
-       "value": 4.0
+       "value": 4
       }
      },
      "54167937cd5044f3acd717d48ae0473c": {
@@ -1575,7 +1577,7 @@
        "style": "IPY_MODEL_af59d279196a4f179f09eb60f3cf27d3",
        "tabbable": null,
        "tooltip": null,
-       "value": 9.0
+       "value": 9
       }
      },
      "54f00df262d941dd9f13ce33d315e983": {
@@ -1649,8 +1651,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_d0fcd3f66b1f49b8aba66079b37efac9",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_0c656f1e293f47ec8494ebccc5873b70",
        "tabbable": null,
@@ -1812,8 +1814,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_bc78ebf6c52d4ebc9b717c367c3c3886",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_0f068b3ebdce4e76ac38f0daf9f4cc0e",
        "tabbable": null,
@@ -2096,13 +2098,13 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_fe7a6efb96ba445e95508cc37190991b",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_7d1006b7b0374719a4753c4c791da596",
        "tabbable": null,
        "tooltip": null,
-       "value": 6.0
+       "value": 6
       }
      },
      "8113a28c73ac49acabd8ce4d2f7d3ae0": {
@@ -2221,8 +2223,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_0415769671fa4b50980390cfd3830788",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.1,
        "style": "IPY_MODEL_5d041ac84bac4f91870262891c9cfea5",
        "tabbable": null,
@@ -2460,8 +2462,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_8983c21214404dd1b1d4ec70ff838021",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.5,
        "style": "IPY_MODEL_b168d54952e24cf5b70d48ce5e4d3a25",
        "tabbable": null,
@@ -2517,8 +2519,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_650509e10cc348e3b5331b27a390684c",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.1,
        "style": "IPY_MODEL_3fa10b95e0c54628886417f937555257",
        "tabbable": null,
@@ -2559,8 +2561,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_ddec4f42a24d4ebb9b2ed358f4e90af9",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.1,
        "style": "IPY_MODEL_ce978be0a7e04e8099b6e34a8fb59476",
        "tabbable": null,
@@ -3002,13 +3004,13 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_9679371dd919400a93b724c40367c850",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_ef0b0955d91f448a9ec8701e394fb134",
        "tabbable": null,
        "tooltip": null,
-       "value": 1.0
+       "value": 1
       }
      },
      "c7bda91f5191470ba8315683eee06a13": {
@@ -3029,8 +3031,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_f23e19c601e54ffba305c19911255952",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_f25b8cf5caf5411ba89550a8152fc9ee",
        "tabbable": null,
@@ -3071,8 +3073,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_a9e7d6782c7143819b218b33cf766252",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_a27f0e77efdc40879716f14d9d96ea4b",
        "tabbable": null,
@@ -3098,8 +3100,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_7e5ad3585b0a48e0aa5a3219901d10aa",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.05,
        "style": "IPY_MODEL_7a775bf8750b4bf69a1015f2d81339a0",
        "tabbable": null,
@@ -3178,8 +3180,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_107cf74ab17141269815914dad4b8d6f",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_7fe8346ed89f491c84d9b00e08c0b4d8",
        "tabbable": null,
@@ -3220,8 +3222,8 @@
        "description_allow_html": false,
        "disabled": false,
        "layout": "IPY_MODEL_54f00df262d941dd9f13ce33d315e983",
-       "max": 100.0,
-       "min": 0.0,
+       "max": 100,
+       "min": 0,
        "step": 0.25,
        "style": "IPY_MODEL_98d0bdf7dbbc427c90935ffe782eab5b",
        "tabbable": null,
@@ -3324,7 +3326,7 @@
        "style": "IPY_MODEL_8113a28c73ac49acabd8ce4d2f7d3ae0",
        "tabbable": null,
        "tooltip": null,
-       "value": 0.0
+       "value": 0
       }
      },
      "e7642de31d034639a9d41d4ef067f8a8": {
