Minor layout updates

--- a/voici/simple_example.ipynb
+++ b/voici/simple_example.ipynb
@@ -9,7 +9,7 @@
     "This integration demonstrates how PAROS can be used to calculate the central magnification of a fundus image.  \n",
     "More information can be found at [our GitHub repository](https://github.com/MREYE-LUMC/PAROS).\n",
     "\n",
-    "> ⚠ THIS EXAMPLE IS NOT INTENDED FOR MEDICAL USE AND DOES NOT ALLOW TO CHANGE CAMERA-RELATED PARAMETERS."
+    "⚠ **THIS EXAMPLE IS NOT INTENDED FOR MEDICAL USE AND DOES NOT ALLOW TO CHANGE CAMERA-RELATED PARAMETERS.**"
    ]
   },
   {
