--- a/examples/calculate_ocular_magnification.ipynb
+++ b/examples/calculate_ocular_magnification.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "## Camera definition\n",
     "\n",
-    "Define the camera. The camera consists of a condenser lens and a focus lens. The condenser lens has a focal length of $f_{cond} = 0.026$ meters. The curvature of the focus lens is adjusted to create a focused image at the CCD, which is located at a distance of $f_{cond}$ from the condenser lens.\n",
+    "Define the camera. The camera consists of a condenser lens and a focus lens. The condenser lens has a focal length of $f_{cond} = 0.027$ meters. The curvature of the focus lens is adjusted to create a focused image at the CCD, which is located at a distance of $f_{cond}$ from the condenser lens.\n",
     "Additionally, a first order correction term $a_1$ is included. Both $f_{cond}$ and $a_1$ are calibrated using a phantom."
    ]
   },
@@ -68,17 +68,17 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{0.000277723727 - 0.026347 R_{foc}}{R_{foc}^{2}} & 0.026347 - \\frac{0.000277723727}{R_{foc}}\\\\\\frac{- 37.9549853873306 R_{foc} - 1.0}{1.0 R_{foc} - 0.010541} & \\frac{1.0 R_{foc}}{1.0 R_{foc} - 0.010541}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{- 0.02657 R_{foc} - 0.0009249017}{R_{foc}^{2}} & 0.02657 + \\frac{0.0009249017}{R_{foc}}\\\\\\frac{- 37.6364320662401 R_{foc} - 1.0}{1.0 R_{foc} + 0.03481} & \\frac{1.0 R_{foc}}{1.0 R_{foc} + 0.03481}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡0.000277723727 - 0.026347⋅R_foc             0.000277723727⎤\n",
-       "⎢───────────────────────────────  0.026347 - ──────────────⎥\n",
-       "⎢                  2                             R_foc     ⎥\n",
-       "⎢             R_foc                                        ⎥\n",
-       "⎢                                                          ⎥\n",
-       "⎢ -37.9549853873306⋅R_foc - 1.0          1.0⋅R_foc         ⎥\n",
-       "⎢ ─────────────────────────────     ────────────────────   ⎥\n",
-       "⎣      1.0⋅R_foc - 0.010541         1.0⋅R_foc - 0.010541   ⎦"
+       "⎡-0.02657⋅R_foc - 0.0009249017            0.0009249017⎤\n",
+       "⎢─────────────────────────────  0.02657 + ────────────⎥\n",
+       "⎢                2                           R_foc    ⎥\n",
+       "⎢           R_foc                                     ⎥\n",
+       "⎢                                                     ⎥\n",
+       "⎢-37.6364320662401⋅R_foc - 1.0        1.0⋅R_foc       ⎥\n",
+       "⎢─────────────────────────────   ───────────────────  ⎥\n",
+       "⎣     1.0⋅R_foc + 0.03481        1.0⋅R_foc + 0.03481  ⎦"
       ]
      },
      "execution_count": 2,
@@ -88,8 +88,8 @@
    ],
    "source": [
     "# define camera\n",
-    "camera_f_cond = 0.026347\n",
-    "camera_a1 = -0.010541\n",
+    "camera_f_cond = 0.02657\n",
+    "camera_a1 = 0.03481\n",
     "\n",
     "camera = fundscale.Camera(F_cond=camera_f_cond, a1=camera_a1)\n",
     "camera_matrix = sp.simplify(camera.ray_transfer_matrix)\n",
@@ -314,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Magnification phakic eye model        : 1.60\n",
+      "Magnification phakic eye model        : 1.61\n",
       "Necessary correction at camera phakic : 0.00 D\n",
       "Eye model                             : phakic\n"
      ]
@@ -350,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Magnification phakic eye model        : 1.54\n",
+      "Magnification phakic eye model        : 1.55\n",
       "Necessary correction at camera phakic : 0.00 D\n",
       "Eye model                             : IOL\n"
      ]
@@ -386,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Magnification phakic eye model        : 1.86\n",
+      "Magnification phakic eye model        : 1.88\n",
       "Necessary correction at camera phakic : 0.00 D\n",
       "Eye model                             : pIOL\n"
      ]
@@ -405,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "paros (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
