--- a/examples/fundus_camera_calibration.ipynb
+++ b/examples/fundus_camera_calibration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:23.359127Z",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:23.371761Z",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:23.377517100Z",
@@ -106,37 +106,11 @@
    },
    "outputs": [],
    "source": [
-    "def get_ccd_size(\n",
-    "    experiment: pd.Series, measurement: str = \"uncorrected_measurement\"\n",
-    ") -> float:\n",
-    "    \"\"\"Get the CCD size for `experiment`.\n",
-    "\n",
-    "    The size is obtained from the column `measurement`. Currently, this value\n",
-    "    is returned as is, because the sizes in our DICOM viewer match with the image sizes\n",
-    "    on the CCD.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    experiment : pandas.Series\n",
-    "        `Series` with the calibration experiment data.\n",
-    "    measurement : str\n",
-    "        Column from which the CCD size is obtained. Defaults to 'uncorrected_measurement'.\n",
-    "        Values from this column are assumed to be in millimeters.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    float\n",
-    "        Size of the CCD, in meters.\n",
-    "    \"\"\"\n",
-    "    measured_size = experiment[measurement] * 1e-3\n",
-    "\n",
-    "    ccd_size = measured_size\n",
-    "\n",
-    "    return ccd_size\n",
-    "\n",
-    "\n",
     "def calculate_magnification(\n",
-    "    experiment, measurement=\"uncorrected_measurement\", object_size: float = 10e-3\n",
+    "    experiment,\n",
+    "    camera: fundscale.Camera,\n",
+    "    measurement: str = \"image_size_px\",\n",
+    "    object_size: float = 10e-3,\n",
     ") -> float:\n",
     "    \"\"\"Calculate the magnification of an object by the camera - phantom system.\n",
     "\n",
@@ -147,17 +121,18 @@
     "    experiment : pandas.Series\n",
     "        `Series` with the calibration experiment data.\n",
     "    measurement : str\n",
-    "        Column from which the image size is obtained. Defaults to 'uncorrected_measurement'.\n",
-    "        Values from this column are assumed to be in millimeters.\n",
+    "        Column from which the image size is obtained. Defaults to 'image_size_px'.\n",
+    "        Values from this column are assumed to be in pixels.\n",
     "    object_size : float\n",
-    "        Size of the object, in millimeters.\n",
+    "        Size of the object, in meters.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
     "    float\n",
     "        Measured magnification.\n",
     "    \"\"\"\n",
-    "    ccd_size = get_ccd_size(experiment, measurement)\n",
+    "    image_size_px = experiment[measurement]\n",
+    "    ccd_size = camera.get_size_on_ccd(image_size_px)  # in meters\n",
     "    magnification = ccd_size / object_size\n",
     "\n",
     "    return magnification"
@@ -165,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:23.389321200Z",
@@ -230,7 +205,7 @@
     "def make_eye_phantoms(\n",
     "    experiment_file: pd.DataFrame,\n",
     "    camera: fundscale.Camera,\n",
-    "    measurement: str = \"uncorrected_measurement\",\n",
+    "    measurement: str = \"image_size_px\",\n",
     ") -> list[PhantomData]:\n",
     "    \"\"\"Create `PhantomData` objects for all experiments in `experiment_file`.\n",
     "\n",
@@ -244,7 +219,7 @@
     "    camera : fundscale.Camera\n",
     "        Optical model of the fundus camera.\n",
     "    measurement : str\n",
-    "        Column containing the measured sizes, defaults to 'uncorrrected_measurement'.\n",
+    "        Column containing the measured sizes, defaults to 'image_size_px'.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -261,7 +236,9 @@
     "        optics_function = sp.lambdify(\n",
     "            (camera.F_cond, camera.a1), magnification_equation\n",
     "        )\n",
-    "        measured_magnification = calculate_magnification(experiment, measurement)\n",
+    "        measured_magnification = calculate_magnification(\n",
+    "            experiment, camera, measurement\n",
+    "        )\n",
     "\n",
     "        phantoms.append(\n",
     "            PhantomData(\n",
@@ -278,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:23.928443500Z",
@@ -293,7 +270,7 @@
    },
    "outputs": [],
    "source": [
-    "camera = fundscale.Camera()\n",
+    "camera = fundscale.Camera(pixel_density=100)\n",
     "eye_phantoms = make_eye_phantoms(calibration_file, camera)"
    ]
   },
@@ -306,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:23.941333800Z",
@@ -412,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T12:36:24.063461500Z",
@@ -433,7 +410,7 @@
        "Text(0, 0.5, 'Model magnification')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
